--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /tmp
 
 # Ignore database.yml to NOT commit mysql creds
-database.yml
+config/database.yml
 
 # Created by https://www.gitignore.io/api/rubymine
 
