--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,6 @@ fabric.properties
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Annoying Mac .DS_Store file
+.DS_Store
