--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ config/database.yml
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# I think everything in .idea/ can be ignored
+.idea/
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
