--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ bower.json
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # I think everything in .idea/ can be ignored
-.idea/
+.idea/*
 
 # User-specific stuff:
 .idea/workspace.xml
