--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Gemfile.lock can be ignored unless we are writing a gem.
+Gemfile.lock
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
